# gsdb

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix
.claude/: pipe2-cloexec.md  register-xmacro-explained.md
include/libgsdb/: error.hpp  libgsdb.hpp  pipe.hpp  process.hpp  register_info.hpp
include/libgsdb/detail/: registers.inc
src/: CMakeLists.txt  libgsdb.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: run_endlessly.cpp
tools/: CMakeLists.txt  gsdb.cpp
